--- a/main/templates/main/create.html
+++ b/main/templates/main/create.html
@@ -20,13 +20,6 @@
         <div class="header-main container">
             <a href="{% url 'main' %}" class="header__logo">Kodopes</a>
             <div class="header-side">
-                <form class="header__search" method="post" action="{% url 'main' %}">
-                    {% csrf_token %}
-                    {{ search_form.search_field }}
-                    <button type="submit">
-                        <img src="{% static '/accounts/img/ui/search.svg' %}" alt="Искать">
-                    </button>
-                </form>
                 <div class="header__nav">
                     {% if user.is_authenticated %}
                     <a href="{% url 'profile_update' user.id %}" class="nav__account">
@@ -44,8 +37,9 @@
     <div class="cataloque">
         <div class="cataloque-main container">
             <div class="cataloque__nav">
-                <a href="#">Товары</a>
-                <a href="#">Заказы</a>
+                {% if user.status == 'Комания' %}
+                    <a href="{% url 'create' %}">Заказы</a>
+                {% endif %}
             </div>
         </div>
     </div>
