--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -19,13 +19,15 @@
         <div class="header-main container">
             <a href="/index.html" class="header__logo">Kodopes</a>
             <div class="header-side">
-                <form class="header__search" method="post" action="{% url 'main' %}">
-                    {% csrf_token %}
-                    {{ form.search_field }}
-                    <button type="submit">
-                        <img src="{% static 'accounts/img/ui/search.svg' %}" alt="Искать">
-                    </button>
-                </form>
+                {% if user.status == 'Покупатель' %}
+                    <form class="header__search" method="post">
+                        {% csrf_token %}
+                        {{ form.search_field }}
+                        <button type="submit">
+                            <img src="{% static 'accounts/img/ui/search.svg' %}" alt="Искать">
+                        </button>
+                    </form>
+                {% endif %}
                 <div class="header__nav">
                     {% if user.is_authenticated %}
                     <a href="{% url 'profile_update' user.id %}" class="nav__account">
@@ -43,8 +45,9 @@
     <div class="cataloque">
         <div class="cataloque-main container">
             <div class="cataloque__nav">
-                <a href="#">Товары</a>
-                <a href="#">Заказы</a>
+                {% if user.status == 'Комания' %}
+                    <a href="{% url 'create' %}">Заказы</a>
+                {% endif %}
             </div>
         </div>
     </div>
