--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -63,42 +63,27 @@
     </div>
     <div class="hero">
         <div class="hero-main container">
-            <h1 class="hero__title">Самый лучший маркетплейс по доставке чугуна.</h1>
-            <p class="hero__subtitle">Прямо сейчас скидки до 50% на все товары из категории “Всё металлическое”.</p>
-            <a href="#" class="hero__action">отлично!</a>
+            <h1 class="hero__title">Заказывайте товары и отслеживайте этапы доставки.</h1>
+            <p class="hero__subtitle">Удобный интерфейс для отслеживания статуса заказа.</p>
+            <a href="#" class="hero__action">начать!</a>
         </div>
     </div>
     <div class="offers">
         <div class="offers-main container">
             <div class="offers__dscr">
-                <h1 class="offers__title">Различные варианты доставки</h1>
-                <p class="offers__subtitle">Прямо сейчас скидки до 50% на все товары из категории “Всё металлическое”.</p>
-                <a href="#" class="offers__action">отлично!</a>
+                <h1 class="offers__title">Различные варианты доставки.</h1>
+                <p class="offers__subtitle">Подходящий вариант для каждого.</p>
+                <a href="#" class="offers__action">о доставке!</a>
             </div>
             <div class="offers__list">
                 <div class="offer__card">
                     <h2 class="card__title">Econom</h2>
                     <ul class="card__props">
                         <li class="prop">
-                            <b>Стоимость: </b>80$
+                            <b>Стоимость: </b>бесплатно
                         </li>
                         <li class="prop">
-                            <b>Скорость доставки: </b>почта России.
-                        </li>
-                        <li class="prop">
-                            <b>Идеально подходит</b> для закупок заранее.
-                        </li>
-                    </ul>
-                    <a href="#" class="card__action">посмотреть</a>
-                </div>
-                <div class="offer__card">
-                    <h2 class="card__title">Econom</h2>
-                    <ul class="card__props">
-                        <li class="prop">
-                            <b>Стоимость: </b>80$
-                        </li>
-                        <li class="prop">
-                            <b>Скорость доставки: </b>почта России.
+                            <b>Скорость доставки: </b>от 1 до 2 недель.
                         </li>
                         <li class="prop">
                             <b>Идеально подходит</b> для закупок заранее.
@@ -107,16 +92,16 @@
                     <a href="#" class="card__action">посмотреть</a>
                 </div>
                 <div class="offer__card">
-                    <h2 class="card__title">Econom</h2>
+                    <h2 class="card__title">Fast</h2>
                     <ul class="card__props">
                         <li class="prop">
-                            <b>Стоимость: </b>80$
+                            <b>Стоимость: </b>299 &#8381;
                         </li>
                         <li class="prop">
-                            <b>Скорость доставки: </b>почта России.
+                            <b>Скорость доставки: </b>от 1 до 3 дней.
                         </li>
                         <li class="prop">
-                            <b>Идеально подходит</b> для закупок заранее.
+                            <b>Идеально подходит</b> для срочных покупок.
                         </li>
                     </ul>
                     <a href="#" class="card__action">посмотреть</a>
@@ -128,44 +113,39 @@
         <div class="guide-main container">
             <div class="guide__card">
                 <div class="guide__card-text">
-                    <h1>Как заказать нужный товар?</h1>
+                    <h1>Как пользоваться?</h1>
                     <p>Шаг 1. Добавьте Ваш товар в корзину.</p>
-                    <p>Шаг 2. Выберите оптимальный способ доставки</p>
-                    <p>Шаг 3. Готово! Ожидайте доставки.</p>
-                    <a href="#" class="card__action">
-                        к ленте товаров!
-                    </a>
+                    <p>Шаг 2. Выберите оптимальный способ доставки.</p>
+                    <p>Шаг 3. Отслеживайте статус доставки заказа.</p>
                 </div>
                 <div class="guide__card-image">
-                    
+                    <img src="assets/images/Pattern.svg" alt="">
                 </div>
             </div>
             <div class="guide__card">
                 <div class="guide__card-text">
-                    <h1>Как заказать нужный товар?</h1>
-                    <p>Шаг 1. Добавьте Ваш товар в корзину.</p>
-                    <p>Шаг 2. Выберите оптимальный способ доставки</p>
-                    <p>Шаг 3. Готово! Ожидайте доставки.</p>
-                    <a href="#" class="card__action">
-                        к ленте товаров!
-                    </a>
+                    <h1>Этапы доставки:</h1>
+                    <p>Этап 1. Формирование заказа.</p>
+                    <p>Этап 2. Передача заказа курьеру. Заказ в пути.</p>
+                    <p>Этап 3. Заказ прибыл в пункт выдачи и ожидает получения.</p>
                 </div>
                 <div class="guide__card-image">
-                    
+                    <img src="assets/images/Pattern.svg" alt="">
                 </div>
             </div>
             <div class="guide__card">
                 <div class="guide__card-text">
-                    <h1>Как заказать нужный товар?</h1>
-                    <p>Шаг 1. Добавьте Ваш товар в корзину.</p>
-                    <p>Шаг 2. Выберите оптимальный способ доставки</p>
-                    <p>Шаг 3. Готово! Ожидайте доставки.</p>
+                    <h1>Почему именно мы?</h1>
+                    <p>1. Прозрачный рабочий процесс.</p>
+                    <p>2. Надежная доставка большим количеством проверенных курьеров.</p>
+                    <p>3. Удобный интерфейс!</p>
+                    
                     <a href="#" class="card__action">
-                        к ленте товаров!
+                        начать!
                     </a>
                 </div>
                 <div class="guide__card-image">
-                    
+                    <img src="assets/images/Pattern.svg" alt="">
                 </div>
             </div>
         </div>
