--- a/accounts/static/accounts/css/index.css
+++ b/accounts/static/accounts/css/index.css
@@ -1,5 +1,5 @@
 .hero {
-    background: url('/static/accounts/img/Pattern.svg');
+    background: url(../images/Pattern.svg);
     background-color: var(--accent50);
 }
 .hero-main {
@@ -14,6 +14,7 @@
     font-size: 32px;
     font-weight: 500;
     max-width: 498px;
+    word-wrap: break-word;
 }
 .hero__subtitle {
     font-size: 18px;
@@ -64,7 +65,7 @@
     line-height: 125%;
 }
 .offers__action {
-    padding: 9px 54px;
+    padding: 9px 30px;
     font-weight: 700;
     font-size: 16px;
     color: var(--accent-color);
@@ -139,6 +140,7 @@
 .guide__card {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .guide__card img {
     width: 130%;
@@ -169,6 +171,7 @@
     font-weight: 500;
     color: var(--accent-color);
     margin-bottom: 41px;
+    word-wrap: break-word;
 }
 .guide__card-text p {
     font-size: 1.6rem;
@@ -191,6 +194,14 @@
     background-color: var(--accent-color);
     color: #fff;
 }
+.pp_doc {
+
+}
+.pp_text {
+    margin-top: 1rem;
+    line-height: 1.25rem;
+}
+
 
 @media (max-width: 1400px) {
     .offers-main {
