--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -59,10 +59,8 @@
             <h1 class="footer__title">Kodopes</h1>
             <div class="footer__nav">
                 <a href="{% url 'main' %}">Главная</a>
-                <a href="/index.html">О доставке</a>
-                <a href="/privacy-policy.html">Политика конфиденциальности</a>
-                <a href="/contacts.html">Контакты</a>
-                <a href="#">FAQ</a>
+                <a href="{% url 'main' %}">О доставке</a>
+                <a href="{% url 'privacy_policy' %}">Политика конфиденциальности</a>
             </div>
         </div>
     </div>
