--- a/main/templates/main/create.html
+++ b/main/templates/main/create.html
@@ -37,8 +37,9 @@
     <div class="cataloque">
         <div class="cataloque-main container">
             <div class="cataloque__nav">
-                {% if user.status == 'Комания' %}
-                    <a href="{% url 'create' %}">Заказы</a>
+                {% if user.status == 'Компания' %}
+                    <a href="{% url 'orders' %}">Заказы</a>
+                    <a href="{% url 'create' %}">Создать заказ</a>
                 {% endif %}
             </div>
         </div>
@@ -117,11 +118,9 @@
         <div class="footer-main container">
             <h1 class="footer__title">Kodopes</h1>
             <div class="footer__nav">
-                <a href="/index.html">Главная</a>
-                <a href="/index.html">О доставке</a>
-                <a href="/privacy-policy.html">Политика конфиденциальности</a>
-                <a href="/contacts.html">Контакты</a>
-                <a href="#">FAQ</a>
+                <a href="{% url 'main' %}">Главная</a>
+                <a href="{% url 'main' %}">О доставке</a>
+                <a href="{% url 'privacy_policy' %}">Политика конфиденциальности</a>
             </div>
         </div>
     </div>
