--- a/main/templates/main/orders_company.html
+++ b/main/templates/main/orders_company.html
@@ -40,8 +40,9 @@
     <div class="cataloque">
         <div class="cataloque-main container">
             <div class="cataloque__nav">
-                {% if user.status == 'Комания' %}
-                    <a href="{% url 'create' %}">Заказы</a>
+                {% if user.status == 'Компания' %}
+                    <a href="{% url 'orders' %}">Заказы</a>
+                    <a href="{% url 'create' %}">Создать заказ</a>
                 {% endif %}
             </div>
         </div>
@@ -60,7 +61,11 @@
                             <div id='order_status'>{{ order.status }}</div>
                             <div class="order__statuses">
                                 <label>
-                                    <div class="status__btn _active" data-group="1">Выставлен</div>
+                                    <div class="status__btn" data-group="1">Выставлен</div>
+                                    <input type="radio" name="1">
+                                </label>
+                                <label>
+                                    <div class="status__btn" data-group="1">Заказан</div>
                                     <input type="radio" name="1">
                                 </label>
                                 <label>
@@ -71,9 +76,15 @@
                                     <div class="status__btn" data-group="1">Ожидает получения</div>
                                     <input type="radio" name="1">
                                 </label>
+                                <label>
+                                    <div class="status__btn" data-group="1">Получен</div>
+                                    <input type="radio" name="1">
+                                </label>
                             </div>
-                            {{ form.status }}
-                            {{ form.number }}
+                            <div hidden>
+                                {{ form.status }}
+                                {{ form.number }}
+                            </div>
                         </div>
                     </div>
                     <button class="orders__confirm" type='submit'>
@@ -89,11 +100,9 @@
         <div class="footer-main container">
             <h1 class="footer__title">Kodopes</h1>
             <div class="footer__nav">
-                <a href="/index.html">Главная</a>
-                <a href="/index.html">О доставке</a>
-                <a href="/privacy-policy.html">Политика конфиденциальности</a>
-                <a href="/contacts.html">Контакты</a>
-                <a href="#">FAQ</a>
+                <a href="{% url 'main' %}">Главная</a>
+                <a href="{% url 'main' %}">О доставке</a>
+                <a href="{% url 'privacy_policy' %}">Политика конфиденциальности</a>
             </div>
         </div>
     </div>
