--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -132,5 +132,6 @@
     <script src="{% static 'main/js/add_to_cart.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>    
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3/dist/js.cookie.min.js"></script>
+    <script src="{% static 'main/js/header.js' %}"
 </body>
 </html>
