--- a/profile_user/templates/profile_user/profile_update.html
+++ b/profile_user/templates/profile_user/profile_update.html
@@ -178,5 +178,6 @@
     
     <script src="{% static 'accounts/js/registry.js' %}"></script>
     <script src="{% static 'profile_user/js/profile.js' %}"></script>
+    <script src="{% static 'main/js/product.js' %}"></script>
 </body>
 </html>
