--- a/main/templates/main/create.html
+++ b/main/templates/main/create.html
@@ -128,5 +128,6 @@
     
     <script src="{% static '/accounts/js/registry.js' %}"></script>
     <script src="{% static 'main/js/create.js' %}"></script>
+    <script src="{% static 'main/js/header.js' %}"></script>
 </body>
 </html>
