--- a/profile_user/templates/profile_user/profile.html
+++ b/profile_user/templates/profile_user/profile.html
@@ -147,7 +147,7 @@
 
     
     <script src="{% static 'profile_user/js/profile.js' %}"></script>
-    <script src="{% static 'main/js/product.js' %}"></script>
+    <script src="{% static 'main/js/header.js' %}"></script>
     
 </body>
 </html>
