--- a/main/templates/main/privacy_policy.html
+++ b/main/templates/main/privacy_policy.html
@@ -47,14 +47,14 @@
     </div>
     
     <div class="guide">
-        <div class="guide-main container">
+        <div class="guide-main container wow" data-style="fade_right">
             <div class="guide__card">
                 <div class="guide__card-text">
                     <h1>Политика конфиденциальности</h1>
                     <p>А вы думали, что она тут есть? </p>
                     <p>Никакой конфиденциальности, у-ха-ха-ха-ха!! </p>
 
-                    <h2>А на самом деле:</h2>
+                    <h2>Какой-то текст:</h2>
                     <ul class="pp_doc">
                         <li class="pp_text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia perspiciatis repellat, sit rem doloremque impedit error vel officiis voluptatum quam libero, alias necessitatibus accusamus quod hic repellendus numquam ipsum. Voluptatum illum, dicta quidem facilis quisquam animi accusantium eius excepturi porro rem tempore odio delectus magnam distinctio corporis neque doloribus quaerat iure in! Eius, ad esse. Velit, aspernatur iste! Autem doloribus accusantium aliquid repellat facere tenetur ducimus accusamus reiciendis dolorem tempora harum ipsam veritatis id nobis qui ipsum eius quia dolor delectus, adipisci suscipit, officiis natus libero? Atque ullam nisi deleniti? Neque sed dolor, temporibus odio tenetur aperiam ad, vel similique maiores asperiores optio non esse modi illum! Voluptatem architecto aut dolore molestiae optio, cum reprehenderit exercitationem reiciendis laborum, vel ratione assumenda ut. Excepturi unde placeat commodi aut consectetur velit sit ab, laboriosam iste beatae eaque cupiditate, necessitatibus non voluptas voluptatum numquam doloremque voluptates dolorum? Voluptas quisquam quas, facere iste accusantium quaerat tenetur inventore culpa velit repellendus nesciunt asperiores laborum autem doloremque exercitationem quae veniam itaque ratione eos quod rerum qui a. Dolor, nobis. Reprehenderit nemo officia iste molestiae eius deleniti nisi eum excepturi ex rerum delectus quisquam quis vel repellendus quam odit ab, nam doloribus? Suscipit, saepe quisquam perferendis expedita earum dolores nemo enim ducimus debitis quo quaerat quos deserunt nobis, facere molestiae pariatur? Voluptate eos aut deleniti neque excepturi, repellendus impedit sint eum sunt voluptates nostrum aliquid perspiciatis tempora fugit veniam consectetur. Quis illo cumque ut culpa iusto, provident officiis quas excepturi optio! Eligendi cupiditate maxime dicta dolorem tempora, odio delectus numquam alias earum natus recusandae iusto voluptatum laudantium quas ut sunt repellendus aliquam vero eveniet, autem nesciunt minima, officiis deleniti nemo. Quae impedit, voluptate tempore dignissimos ducimus dolorum at dolor, ipsa alias in, suscipit rem cupiditate. Magnam ad amet aut deserunt, laboriosam dolorem voluptatum voluptatibus aliquam reprehenderit natus eum impedit doloribus aperiam quibusdam quos, non illum obcaecati in! Praesentium consectetur facere quod incidunt illum quo doloribus, excepturi, laboriosam odio, tempora eligendi dicta aliquid ullam nobis dolorum architecto ducimus corporis? Voluptatum omnis libero architecto doloribus quidem cupiditate, quos laboriosam soluta autem iste, neque cum harum veniam accusamus eum cumque odio nihil maxime ex minima. Tenetur, adipisci sed quaerat doloribus velit explicabo odio vel! Deserunt facilis facere quidem voluptate harum enim blanditiis, id voluptas asperiores, modi maxime vero, veritatis hic! Debitis cumque tenetur deserunt deleniti magni ratione et fugit, saepe neque dolor mollitia eveniet nulla sed, recusandae facere, similique asperiores itaque voluptates quia assumenda officia quasi. Voluptatem quae repudiandae dolore quis, necessitatibus blanditiis deserunt minima vitae optio maxime? Delectus rem velit in nemo doloremque nulla odio, laudantium animi non repellendus magni minus omnis. Blanditiis quaerat dolor repellendus voluptatum reprehenderit mollitia aspernatur sequi fugiat quibusdam praesentium, at aut voluptatem libero obcaecati iste necessitatibus laudantium ipsa corporis dolore hic deserunt quidem asperiores sit! Veritatis dicta quos similique officiis, laboriosam veniam doloribus quaerat ipsa officia, eum commodi vel voluptate assumenda unde corrupti harum minima dolore dolores laudantium! Recusandae et laboriosam quae, dolor maxime numquam alias, architecto mollitia assumenda consequuntur vel. Similique, ducimus.
@@ -81,5 +81,8 @@
             </div>
         </div>
     </div>
+
+    <script src="{% static 'main/js/wow.js' %}"></script>
+    <script src="{% static 'main/js/header.js' %}"></script>
 </body>
 </html>
