--- a/main/templates/main/create.html
+++ b/main/templates/main/create.html
@@ -129,5 +129,6 @@
     <script src="{% static '/accounts/js/registry.js' %}"></script>
     <script src="{% static 'main/js/create.js' %}"></script>
     <script src="{% static 'main/js/header.js' %}"></script>
+    <script src="{% static 'main/js/wow.js' %}"></script>
 </body>
 </html>
