--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -163,5 +163,6 @@
     </div>
 
     <script src="{% static 'main/js/header.js' %}"></script>
+    <script src="{% static 'main/js/wow.js' %}"></script>
 </body>
 </html>
