ссылка на вк добавлена

--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -45,7 +45,7 @@
                         <img src="{% static 'accounts/img/ui/user.svg' %}" alt="Аккаунт">
                     </a>
                     {% endif %}
-                    <a href="#" class="nav__vk">
+                    <a href="https://vk.com/code_rocks_hack_2024" class="nav__vk">
                         <img src="{% static 'accounts/img/ui/vk.svg' %}" alt="VK">
                     </a>
                 </div>
