--- a/main/templates/main/orders_company.html
+++ b/main/templates/main/orders_company.html
@@ -18,7 +18,7 @@
 <body>
     <div class="header">
         <div class="header-main container">
-            <a href="/index.html" class="header__logo">Kodopes</a>
+            <a href="{% url 'main' %}" class="header__logo">Kodopes</a>
             <div class="header-side">
                 <form class="header__search">
                     <input type="text" id="searchInput" placeholder="Введите номер заказа">
