--- a/main/templates/main/results.html
+++ b/main/templates/main/results.html
@@ -18,10 +18,10 @@
 <body>
     <div class="header">
         <div class="header-main container">
-            <a href="/index.html" class="header__logo">Kodopes</a>
+            <a href="{% url 'main' %}" class="header__logo">Kodopes</a>
             <div class="header-side">
                 {% if user.status == 'Покупатель' %}
-                    <form class="header__search" method="post">
+                    <form class="header__search" method="post" action='{% url "main" %}'>
                         {% csrf_token %}
                         {{ form.search_field }}
                         <button type="submit">
