--- a/profile_user/templates/profile_user/profile_update.html
+++ b/profile_user/templates/profile_user/profile_update.html
@@ -104,7 +104,7 @@
                         <div class="order__image" data-imgurl="{{ order.picture1.url }}"></div>
                         <div class="order__info">
                             <div class="info__text">
-                                <h2 class="info__title">{{ order.number }}</h2>
+                                <h2 class="info__title"><a href="{% url 'detail' order.id %}">{{ order.number }}</a></h2>
                                 <div class="info__name">{{ order.name }}</div>
                             </div>
                             <div class="order__status">{{ order.status }}</div>
